syntax = "proto3";

package lowcode.form;

message ValidationRule {
  string type = 1;
  string value = 2;
}

message Field {
  string name = 1;
  string label = 2;
  string type = 3;
  bool required = 4;
  repeated string options = 5;
  repeated ValidationRule rules = 6;
  string version = 7;
}

message FormSchema {
  string formName = 1;
  string version = 2;
  repeated Field fields = 3;
}
